Working /user GET & POST endpoints
